--- a/Index.html
+++ b/Index.html
@@ -78,13 +78,13 @@
   <h2 class="fasilitas-title">Fasilitas</h2>
   
   <div class="fasilitas-grid">
-    <img src="styles/image/jalan.jpg" alt="Fasilitas 1">
-    <img src="styles/image/jalan2.jpg" alt="Fasilitas 2">
-    <img src="styles/image/koskosancempakaputih.jpg" alt="Fasilitas 3">
-    <img src="styles/image/Parkir.jpg" alt="Fasilitas 4">
-    <img src="styles/image/Tangga.jpg" alt="Fasilitas 5">
-    <img src="styles/image/kamarkoskosancempakaputih.jpg" alt="Fasilitas 5">
-    <img src="styles/image/KAMARMANDI.jpg" alt="Fasilitas 5">
+    <img src="styles/image/jalan.png" alt="Fasilitas 1">
+    <img src="styles/image/jalan2.png" alt="Fasilitas 2">
+    <img src="styles/image/kamarkoskosancempakaputih.png" alt="Fasilitas 3">
+    <img src="styles/image/Parkir.png" alt="Fasilitas 4">
+    <img src="styles/image/Tangga.png" alt="Fasilitas 5">
+    <img src="styles/image/kamarkoskosancempakaputih.png" alt="Fasilitas 5">
+    <img src="styles/image/KAMARMANDI.png" alt="Fasilitas 5">
 
   </div>
 </section>
