--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                     <div class="fasilitas-grid">
                         <img src="styles/image/jalan.png" alt="Fasilitas 1">
-                        <img src="styles/image/jalan2.png" alt="Fasilitas 2">
+                        <img src="styles/image/jalan 2.jpg" alt="Fasilitas 2">
 
                         <img src="styles/image/Parkir.png" alt="Fasilitas 3">
 
